; ModuleID = '/home/carl/AnghaBench/mpv/demux/extr_packet.c_new_demux_packet_from_buf.c'
source_filename = "/home/carl/AnghaBench/mpv/demux/extr_packet.c_new_demux_packet_from_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.demux_packet = type { i32 }
%struct.AVBufferRef = type { i32, i32 }
%struct.TYPE_3__ = type { %struct.AVBufferRef*, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.demux_packet* @new_demux_packet_from_buf(%struct.AVBufferRef* %0) #0 {
  %2 = alloca %struct.demux_packet*, align 8
  %3 = alloca %struct.AVBufferRef*, align 8
  %4 = alloca %struct.TYPE_3__, align 8
  store %struct.AVBufferRef* %0, %struct.AVBufferRef** %3, align 8
  %5 = load %struct.AVBufferRef*, %struct.AVBufferRef** %3, align 8
  %6 = icmp ne %struct.AVBufferRef* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store %struct.demux_packet* null, %struct.demux_packet** %2, align 8
  br label %20

8:                                                ; preds = %1
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %10 = load %struct.AVBufferRef*, %struct.AVBufferRef** %3, align 8
  store %struct.AVBufferRef* %10, %struct.AVBufferRef** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 1
  %12 = load %struct.AVBufferRef*, %struct.AVBufferRef** %3, align 8
  %13 = getelementptr inbounds %struct.AVBufferRef, %struct.AVBufferRef* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %11, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 2
  %16 = load %struct.AVBufferRef*, %struct.AVBufferRef** %3, align 8
  %17 = getelementptr inbounds %struct.AVBufferRef, %struct.AVBufferRef* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  store i32 %18, i32* %15, align 4
  %19 = call %struct.demux_packet* @new_demux_packet_from_avpacket(%struct.TYPE_3__* %4)
  store %struct.demux_packet* %19, %struct.demux_packet** %2, align 8
  br label %20

20:                                               ; preds = %8, %7
  %21 = load %struct.demux_packet*, %struct.demux_packet** %2, align 8
  ret %struct.demux_packet* %21
}

declare dso_local %struct.demux_packet* @new_demux_packet_from_avpacket(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
